# AEngine

./: .gitignore  .gitmodules  ApproxEngine.sln  CMakeLists.txt  Engine.sln
ApproxCommonSystem/: ApproxCommonSystem.vcxproj  ApproxCommonSystem.vcxproj.filters  ApproxMemory.h  ApproxSystemErrors.cpp  ApproxSystemErrors.h  ApproxSystemTools.h  EventEmitter.cpp  EventEmitter.h  FnPtr.h  GenericPool.h  IFnPtr.h  ReadMe.txt  Tuple.h
ApproxGUI_Library/: AnimatedGraphicsWidget.h  AnimatedWidget.h  ApproxGUI_Library.vcxproj  ApproxGUI_Library.vcxproj.filters  ApproxGuiResManager.cpp  ApproxSizeGrip.cpp  ApproxSizeGrip.h  ApproxWindow.h  Button.h  ButtonIconSet.cpp  MouseTracker.cpp  PopupDialog.h
ApproxGlobalServices/: ApproxGlobalServices.vcxproj  ApproxGlobalServices.vcxproj.filters  ApproxStatistics.h
ApproxInput/: ApproxInput.vcxproj  ApproxInput.vcxproj.filters  IExternalInput.h  IInput.cpp  IInternalInput.h  WindowsKeys.h  inputclass.cpp  inputclass.h
ApproxShaderLab/: ASLButton.h  AbstractSaveData.h  ApproxGUIMenuBar.cpp  ApproxGUIMenuBar.h  ApproxGUIMenuButton.cpp  CodeEditor.h  (+69 more)
Editor/: CMakeLists.txt  ColorParamUI.cpp  ColorParamUI.h  ColorParamUI.ui  Editor.cpp  Editor.exp  Editor.h  Editor.ui  Editor.vcxproj  Editor.vcxproj.filters  FloatParamUI.cpp  FloatParamUI.h  FloatParamUI.ui  MaterialSettingsUI.cpp  MaterialSettingsUI.h  TextureParamUI.cpp  TextureParamUI.h  TextureParamUI.ui  approxeditor_en.ts  approxeditor_ru.ts  editor.qrc  editor_old.cpp  main.cpp  modelloaderui.cpp  modelloaderui.h  modelloaderui.ui  rendererwrapper.cpp  rendererwrapper.h  rendererwrapper.ui  shader-error.txt  testFile.acs
Editor/Resources/: editor.qrc  editor.qss  source.psd
GlobalServices/: CMakeLists.txt
GlobalServices/include/: ApproxStatistics.h  Logger.h
GlobalServices/src/: ApproxStatistics.cpp  Logger.cpp
Input/: CMakeLists.txt
Input/include/: IExternalInput.h  IInternalInput.h  Keys.h
Input/src/: inputclass.cpp  inputclass.h
PlatformAbstraction/: CMakeLists.txt
PlatformAbstraction/Linux/: IO.cpp  OS.cpp
PlatformAbstraction/Windows/: IO.cpp  OS.cpp
PlatformAbstraction/include/: IO.h  OS.h
RendererAbstract/: CMakeLists.txt
RendererAbstract/include/: AABB.h  ACSReader.h  AbstractObjectFactory.h  AbstractShader.h  IExternalMaterial.h  IExternalRenderObject.h  IExternalRenderer.h  IExternalScene.h  IGeometryBuffer.h  IGraphicsAPI.h  IInternalMaterial.h  IMaterialVariable.h  IMesh.h  IObjectFactory.h  IShader.h  ITextEngine.h  ITexture2D.h  IVertexType.h  MemoryMultiplexer.h  Renderer.h  RendererCommonDefinitions.h  ShaderDesc.h  ShaderSystemTypes.h  VertexTypes.h
RendererAbstract/src/: AABB.cpp  ACSReader.cpp  AbstractObjectFactory.cpp  AbstractScene.cpp  AbstractScene.h  AbstractShader.cpp  AlignedObject.cpp  AlignedObject.h  Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  GenericStruct.cpp  GenericStruct.h  GenericVariable.cpp  GenericVariable.h  HUD2D.cpp  HUD2D.h  HUDElement.cpp  HUDElement.h  IInternalRenderObject.h  IMeshLoader.h  IShaderParams.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialInterface.h  MaterialInterfaceManager.cpp  MaterialInterfaceManager.h  MaterialVariable.h  Memory.cpp  Memory.h  MemoryBlock.cpp  MemoryBlock.h  MemoryMultiplexer.cpp  MemoryMultiplexer.h  ObjMeshLoader.cpp  ObjMeshLoader.h  Octree.cpp  (+14 more)
RendererD3D11/: CMakeLists.txt  D3D11Common.h  D3D11System.cpp  D3D11System.h  D3DTexture.cpp  D3DTexture.h  GeometryBuffer.cpp  GeometryBuffer.h  HUDElement.cpp  HUDElement.h  ObjectFactory.cpp  ObjectFactory.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h
RendererD3D11/Shaders/AmbientLightShader/: PixelShader.hlsl
RendererD3D11/Shaders/ColorShader/: PixelShader.hlsl  VertexShader.hlsl
RendererD3D11/Shaders/MultitextureShader/: PixelShader.hlsl  VertexShader.hlsl
RendererD3D11/Shaders/SpecularShader/: PixelShader.hlsl
RendererD3D11/Shaders/Wireframe/: GeometryShader.hlsl  VertexShader.hlsl
RendererVulkan/: CMakeLists.txt  ErrorHandling.h  GeometryBuffer.cpp  GeometryBuffer.h  ObjectFactory.cpp  ObjectFactory.h  RendererVulkan.cpp  RendererVulkan.h  Shader.cpp  Shader.h  VulkanAPI.cpp  VulkanAPI.h
RendererVulkan/Linux/: PlatformAbstraction.h
RendererVulkan/Windows/: PlatformAbstraction.h
ShaderLab/: ASLButton.cpp  AbstractSaveData.h  ApproxGUIMenuButton.cpp  ApproxGUIMenuButton.h  ApproxLoadingElement.cpp  ApproxLoadingElement.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  Controller.cpp  Controller.h  Enums.h  GLSLCodeProcessing.cpp  GLSLangReflection.h  GlobalSettingsForm.cpp  GlobalSettingsForm.ui  GraphicsView.cpp  GraphicsView.h  HLSLCodeProcessing.cpp  HLSLHighlighter.cpp  HLSLHighlighter.h  HLSLShaderPackFile.h  IApproxShaderLabControl.h  IApproxShaderLabExternalControl.h  IControllerSession.h  IShaderCodeProcessor.h  ISyntaxHighlighter.h  Link.h  LinkingPoint.cpp  LinkingPoint.h  Literals.h  MaterialVar.cpp  MaterialVarsContainer.cpp  MaterialVarsContainer.h  RuntimeBufferInfo.h  SPIRVShaderCodeProcessor.cpp  SPIRVShaderCodeProcessor.h  Session.cpp  Session.h  ShaderBuffer.cpp  (+24 more)
ShaderLab/Resources/: resources.qrc
ShaderLab/serialization/: PipelineCompiled.h  PipelineProject.h  PipelineSource.h  RuntimeBufferInfo.h  ShaderCommon.h  ShaderCompiled.h  ShaderParameterInfo.h  ShaderSource.h  TextureInfo.h  Utils.h
Sound/: CMakeLists.txt  DirectSoundSystem.cpp  DirectSoundSystem.h  GenericSoundSystem.cpp  GenericSoundSystem.h
Sound/include/: IExternalSound.h  IInternalSound.h
System/: AbstractThread.cpp  AbstractThread.h  ApproxGameObject.cpp  ApproxGameObject.h  AsynchronousThread.cpp  AsynchronousThread.h  CMakeLists.txt  ISystem.h  SyncEvent.cpp  SyncEvent.h  SynchronizedMasterThread.cpp  SynchronizedMasterThread.h  SynchronizedSlaveThread.cpp  SynchronizedThread.h  System.cpp  System.h  SystemThreadPool.cpp  SystemThreadPool.h  TODO.txt  main.cpp
System/Resources/Fonts/: verdana.spritefont
System/Resources/Meshes/: plane140.mtl  terst.mtl  test.mtl
System/Resources/Textures/: NoTexture.dds  testHUD.dds
Terminal/: CMakeLists.txt
Terminal/include/: Terminal.h
Terminal/src/: Terminal.cpp
(+208 files in other folders)
